<resources>
    <string name="app_name">Sistema entrenamiento corporal y preparación fisica</string>
    <string name="title_home">Estadísticas</string>
    <string name="title_dashboard">Ejercicios</string>
    <string name="title_notifications">Alimentos</string>
    <string name="title_settins">Configuración</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bienvenido</string>
    <string name="registrar">Registrarse</string>
    <string name="iniciaSesion">Iniciar Sesión</string>
    <string name="fechaNacimiento">Fecha de nacimieto:</string>
    <string name="actualizarDatos">Guardar datos</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="grasaCorporal">Grasa corporal</string>
    <string name="musculo">Masa muscular</string>
    <string name="otroDato">Otros datos</string>
    <string name="addcalorias">Agregar Calorias</string>
    <string name="caloriasConsumidas">Calorias hoy:</string>
    <string name="addcaloriasConsumidas">Agregar calorias consumidas hoy:</string>
    <string name="Usuario">Usuario:</string>
    <string name="Correo">Correo:</string>
    <string name="Telefono">Telefono:</string>
    <string name="Voz">Preferencia de voz:</string>
    <string name="rutina">Rutina de hoy</string>
    <string name="allEjercicios">Todos los ejercicios</string>
    <string name="verallEjercicios">Ver todos los ejercicios</string>
    <string name="verallCategorias">Ver todas las categorias</string>
    <string name="comidasRecomendadas">Comidas Recomendadas</string>
    <string name="desayuno">Desayuno</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="colacionesRecomendadas">Bebidas Recomendadas</string>
    <string name="verallRutinas">Ver todas las rutinas</string>
    <string name="rutinaRecomendada">Rutina recomendada</string>
    <string name="subirPeso">Subir peso</string>
    <string name="Categorias">Categorias</string>
    <string name="Rutinas">Rutinas</string>
    <string name="activarVoz">Habilitar asistencia de voz</string>
    <string name="vozHombre">Voz de hombre</string>
    <string name="vozMujer">Voz de mujer</string>
    <string name="objetivos">¿Cuáles son tus objetivos a lograr?</string>
    <string name="datos_generales">Datos generales</string>
    <string name="acerca_de">Acerca de:</string>
    <string name="todo">Hecho</string>
    <string name="semana">Semana 1</string>
    <string name="media_pipe">MediaPipe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the pose landmarker.</string>
    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_pose_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_pose_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">Model</string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>
    <string name="tituloupdateDatos">"Actuzalizar datos"</string>
    <string name="tituloinsertDatos">"Cargar datos"</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_barcode_scanning" translatable="false">Barcode Scanning</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_key_enable_auto_zoom" translatable="false">eaz</string>
    <string name="pref_title_enable_auto_zoom" translatable="false">Enable auto zoom</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_show_text_confidence" translatable="false">Show confidence score</string>
    <string name="pref_key_show_text_confidence" translatable="false">stc</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate" translatable="false">Accurate</string>
</resources>