<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuracion.configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginRight="15dp">
                </ImageView>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logo_ccai">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:background="@color/fondo"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Usuario"
                    android:fontFamily="@font/oswald_variablefont_wght">
                </TextView>
                <TextView
                    android:id="@+id/nombreE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fondo"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Correo"
                    android:fontFamily="@font/oswald_variablefont_wght">
                </TextView>
                <TextView
                    android:id="@+id/correoE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:background="@color/fondo"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Telefono"
                    android:fontFamily="@font/oswald_variablefont_wght">
                </TextView>
                <TextView
                    android:id="@+id/telefonoE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/acercaDe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@color/fondo"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/acercadeTExto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acerca_de"
                    android:fontFamily="@font/oswald_variablefont_wght">
                </TextView>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|right"
                    android:src="@drawable/arrowforward"></ImageView>
            </LinearLayout>
            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cerrar sesion"></Button>
        </LinearLayout>
    </ScrollView>

</FrameLayout>